# spring2024-slam

./: LICENSE  README.md
examples/: eigen-example
examples/05_cpp/: references  references.cpp  stdsample  stdsample.cpp  streams  streams.cpp  strings  strings.cpp  vectors  vectors.cpp
examples/ros2/bookros2_ws/bag_files/rosbag2_2024_03_10-12_16_13/: metadata.yaml  rosbag2_2024_03_10-12_16_13_0.db3
examples/ros2/bookros2_ws/bag_files/subset/: metadata.yaml  subset_0.db3
examples/ros2/bookros2_ws/install/: local_setup.sh  setup.sh
examples/ros2/bookros2_ws/install/br2_basics/lib/br2_basics/: executors  logger  logger_class  param_reader  publisher  publisher_class  subscriber_class
examples/ros2/bookros2_ws/install/br2_basics/share/br2_basics/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
examples/ros2/bookros2_ws/install/br2_bt_bumpgo/include/br2_bt_bumpgo/: Back.hpp  Forward.hpp  IsObstacle.hpp  Turn.hpp
examples/ros2/bookros2_ws/install/br2_bt_bumpgo/lib/br2_bt_bumpgo/: bt_bumpgo  bt_forward
examples/ros2/bookros2_ws/install/br2_bt_bumpgo/share/br2_bt_bumpgo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
examples/ros2/bookros2_ws/install/br2_bt_patrolling/include/br2_bt_patrolling/: BatteryChecker.hpp  GetWaypoint.hpp  Move.hpp  Patrol.hpp  Recharge.hpp  TrackObjects.hpp
examples/ros2/bookros2_ws/install/br2_bt_patrolling/lib/br2_bt_patrolling/: patrolling_main
examples/ros2/bookros2_ws/install/br2_bt_patrolling/share/br2_bt_patrolling/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
examples/ros2/bookros2_ws/install/br2_fsm_bumpgo_cpp/lib/br2_fsm_bumpgo_cpp/: bumpgo
examples/ros2/bookros2_ws/install/br2_fsm_bumpgo_cpp/share/br2_fsm_bumpgo_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
examples/ros2/bookros2_ws/install/br2_fsm_bumpgo_py/lib/br2_fsm_bumpgo_py/: bump_go_main
examples/ros2/bookros2_ws/install/br2_fsm_bumpgo_py/share/br2_fsm_bumpgo_py/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
examples/ros2/bookros2_ws/install/br2_navigation/share/br2_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
examples/ros2/bookros2_ws/install/br2_tf2_detector/lib/br2_tf2_detector/: detector  detector_improved
examples/ros2/bookros2_ws/install/br2_tf2_detector/share/br2_tf2_detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
examples/ros2/bookros2_ws/install/br2_tiago/share/br2_tiago/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
examples/ros2/bookros2_ws/install/br2_tracking/lib/br2_tracking/: object_detector  object_tracker
examples/ros2/bookros2_ws/install/br2_tracking/share/br2_tracking/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
examples/ros2/bookros2_ws/install/br2_tracking_msgs/share/br2_tracking_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
examples/ros2/bookros2_ws/install/br2_vff_avoidance/lib/br2_vff_avoidance/: avoidance_vff
examples/ros2/bookros2_ws/src/my_package/: CMakeLists.txt
examples/ros2/bookros2_ws/src/my_package/src/: simple.cpp
hw/hw-02/: random-number  random-number.cpp
hw/hw-02/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h
hw/hw-04/lidar_slam/.devcontainer/: Dockerfile  devcontainer.json
hw/hw-04/lidar_slam/data/rgbd/: cloud_bin_6.ply  cloud_bin_7.ply
hw/hw-04/lidar_slam/src/: main.cpp
hw/hw-04/lidar_slam_container/: CMakeLists.txt
hw/hw-04/lidar_slam_container/.devcontainer/: Dockerfile
hw/hw-04/lidar_slam_container/data/lidar/: Hokuyo_7.ply
hw/hw-04/not-using-container/lidar_slam_local/.devcontainer/: Dockerfile
hw/hw-04/not_using_container/lidar_slam_local/: CMakeLists.txt
hw/hw-04/not_using_container/lidar_slam_local/data/lidar/: Hokuyo_2.ply
hw/hw-04/not_using_container/lidar_slam_local/src/: main.cpp
hw/hw-05/camera_slam/: CMakeLists.txt
hw/hw-05/camera_slam/data/: camera_calibration_undistorted.json
hw/hw-05/camera_slam/src/: main.cpp
project-submission/: reportlink.txt
project-submission/hw4-sourcecode/: README-hw4.md
project-submission/hw4-sourcecode/whole-project/: CMakeLists.txt
project-submission/hw4-sourcecode/whole-project/data/lidar/: Hokuyo_3.ply  Hokuyo_4.ply  Hokuyo_5.ply  Hokuyo_6.ply  Hokuyo_8.ply  Hokuyo_9.ply
project-submission/hw4-sourcecode/whole-project/src/: main.cpp
project-submission/hw5-videos/: README.md
project-submission/report/: main.tex
(+1136 files in other folders)
